--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             transform: translate(-50%, -50%);
         }
         textarea {
-            height: 400px;
+            max-height: 400px;
         }
         canvas {
     width: 100% !important;
