--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
     
     <meta property="og:title" content="Code Complexity Analyzer">
     <meta property="og:description" content="Analyze the complexity of your code and optimize it effectively. Get insights into time and space complexity.">
-    <meta property="og:image" content="{{ url_for('static', filename='og-image.jpg') }}">
+    <meta property="og:image" content="{{ url_for('static', filename='og-image.png') }}">
     <meta property="og:site_name" content="Code Complexity Analyzer">
     <meta property="og:url" content="https://code-complexity-analyzer.vercel.app/">
     <meta property="og:type" content="website">
 
-    <meta property="twitter:image" content="{{ url_for('static', filename='og-image.jpg') }}">
+    <meta property="twitter:image" content="{{ url_for('static', filename='og-image.png') }}">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Code Complexity Analyzer">
     <meta property="twitter:description" content="Analyze the complexity of your code with our Code Complexity Analyzer. Get insights into time and space complexity and optimize your code effectively.">
