added google analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,15 @@
     <meta name="keywords" content="Code Complexity, Analyzer, Time Complexity, Space Complexity, Code Optimization">
     <meta name="author" content="Swaroop Patil">
     <meta name="robots" content="index, follow">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-52JKZK593H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-52JKZK593H');
+    </script>
     
     <meta property="og:title" content="Code Complexity Analyzer">
     <meta property="og:description" content="Analyze the complexity of your code and optimize it effectively. Get insights into time and space complexity.">
